# DevUP

./: Makefile  answer.json  docker_start.sh  pyproject.toml  starter.py
migrations/: env.py
migrations/versions/: 616a57175e77_.py  8a0975a96fdc_initial_revision.py  e47f9c9fbc07_.py  e7a3d29c73e6_.py
src/: bot.py  config.py  main.py
src/answers/: buttons.py  messager.py  start.py
src/conts/: users.py
src/db/: info.py  session.py  user.py
src/models/: info.py  users.py
src/schemas/: info.py  users.py
