[tool.poetry]
name = "telegrambot"
version = "0.1.0"
description = ""
authors = ["goncharov sasha <sasha.goncharov.08.10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytelegrambotapi = "^4.29.1"
pydantic-settings = "^2.11.0"
asyncio = "^4.0.0"
aiohttp = "^3.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
